--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs", "yarn"]
+nixPkgs = ['nodejs', 'yarn']
 
 [phases.install]
-cmds = ["yarn install"]
+cmds = ['yarn install --frozen-lockfile']
 
 [phases.build]
-cmds = ["yarn build"]
+cmds = ['yarn build']
 
 [start]
-cmd = "yarn start"
+cmd = 'yarn start'
