chore: standardize package manager and config files
- Remove next.config.ts and package-lock.json from git tracking
- Add .npmrc for PNPM configuration
- Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# redundant config files
+next.config.mjs
+next.config.ts
+package-lock.json
