--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
-    "next": "^14.0.0",
+    "next": "15.0.4",
     "openai": "^4.76.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
@@ -44,10 +44,10 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "shadcn-ui": "^0.9.3",
     "tailwindcss": "^3.4.1",
